[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { version = "0.14", features = ["async", "smol"] }
anyhow = { version = "1.0" }
smol = { version = "1.3" }
ansi_term = { version = "0.12" }
# textwrap = { version = "0.16", features = ["terminal_size"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
base64 = "0.21.0"
itertools = "0.10.5"
